--- a/android-developer.html
+++ b/android-developer.html
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://santoranakama.applytojob.com/apply/ktey8E4eAi/Android-Developer-Panya-Studios'>Android Developer | Panya Studios - Santora Nakama - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://santoranakama.applytojob.com/apply/ktey8E4eAi/Android-Developer-Panya-Studios'>Android Developer | Panya Studios - Santora Nakama - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -105,7 +105,7 @@
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lagash/5947c28c-cf63-4bb6-8f4b-96d25a61a0d5'>Lagash - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/lagash/5947c28c-cf63-4bb6-8f4b-96d25a61a0d5'>Lagash - Android Developer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -145,7 +145,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999682221194-android-developer-to-work-in-lisbon-portugal'>Cross Border Talents Android Developer to Work In Lisbon, Portugal | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999682221194-android-developer-to-work-in-lisbon-portugal'>Cross Border Talents Android Developer to Work In Lisbon, Portugal | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -197,11 +197,11 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freenow/jobs/1746925'>Job Application for Android Developer (m/f/d) at FREE NOW</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1746925'>Job Application for Android Developer (m/f/d) at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freenow/jobs/1746926'>Job Application for Android Developer (m/f/d)  at FREE NOW</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1746926'>Job Application for Android Developer (m/f/d)  at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -213,7 +213,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/picsart/8fe4ffae-d27e-4235-b585-c4bc05ca212d'>PicsArt - Senior Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/picsart/8fe4ffae-d27e-4235-b585-c4bc05ca212d'>PicsArt - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -236,7 +236,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/BBfNXhHnA3/Senior-Android-Developer'>Senior Android Developer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/BBfNXhHnA3/Senior-Android-Developer'>Senior Android Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -270,7 +270,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999691549861-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999691549861-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -300,7 +300,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://gapstars.recruitee.com/o/senior-android-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gapstars.recruitee.com/o/senior-android-developer'>
       Senior Android Developer - Gapstars
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
